# gpt-code-critic

./: .gitignore  README.md  action.yaml  main.py
.github/workflows/: action.yaml  deploy.yaml
k8s/: ingress.yaml  web.yaml
src/: code_checker.py
web/: Dockerfile  code_checker.py  main.py  pyproject.toml
